# determinant-openmp

./: .gitignore  CMakeLists.txt  plots.py
output/: benchmark.json  benchmark2.json  benchmark3.json
report/: report.tex
sources/: benchmark.cpp  determinant.h  matrix.h  test.cpp
sources/obsolete/: premutation.h
